# cookiecutter-testing

./: .cookiecutter.json  .flake8  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  noxfile.py  pyproject.toml
.github/workflows/: labeler.yml  semantic-release.yml  tests.yml
changelogs/latest/: changelog.md
docs/: conf.py  index.md  reference.md  usage.md
src/cookiecutter_testing/: __init__.py  __main__.py
tests/: __init__.py  test_main.py
